helm-values/prometheus/prometheus-ingress-prod-powerbiz-nlb.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-prod-powerbiz-ingress
  namespace: monitoring
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: prometheus-basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
    - host: prod-powerbiz-prometheus.powerbiz.asia
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
           service:
              name: prometheus-kube-prometheus-prometheus
              port: 
                number: 9090
